# google_cloud_function_samples

./: .env.dev  .env.local  .env.say_hello  .env.uat  .gitignore  .pre-commit-config.yaml  README.md  config.dev.json  config.dev.yaml  config.json  config.local.json  config.local.yaml  config.uat.yaml  config.yaml  pyproject.toml
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py
src/application/use_cases/: __init__.py  chat_use_case.py  say_hello_use_case.py
src/cloud_functions/: __init__.py  chat.rest  chat_http.py  google_chatbot_http.py  google_chatbot_http.rest  hello_basic_pubsub.py  hello_extended_pubsub.py  hello_extended_pubsub.rest  hello_gcs.py  say_hello_advanced_http.py  say_hello_basic_http.py  say_hello_extended_http.py  say_hello_ultimate_http.py
src/cloud_functions/dtos/: __init__.py
src/cloud_functions/gcs/: __init__.py  hello_basic_gcs.rest
src/cloud_functions/http/: say_hello.py  say_hello.rest  say_hello_advanced_http.py  say_hello_advanced_http.rest  say_hello_basic_http.rest  say_hello_extended_http.py
src/cloud_functions/pubsub/: hello_advanced_pubsub.py  hello_advanced_pubsub.rest  say_hello.py
src/cloud_functions/say_hello_advanced_http/: __init__.py  say_hello_advanced_http_handler.py
src/cloud_functions/say_hello_extended_http/: __init__.py  greeting_language_decorator.py  greeting_service.py  say_hello_extended_http.py  say_hello_extended_http.rest
src/cloud_functions/say_hello_ultimate_http/: __init__.py  greeting_request_response.py  greeting_service.py  greeting_strategy_factory.py  say_hello_ultimate_http.py  say_hello_ultimate_http.rest  say_hello_ultimate_http_handler.py
src/cloud_functions/settings_decorator_demos/: settings_from_env_file_http.py  settings_from_gcp_secret_env_http.py  settings_from_gcp_secret_json_http.py  settings_from_gcp_secret_yaml_http.py  settings_from_gcp_storage_env_http.py  settings_from_gcp_storage_json_http.py  settings_from_gcp_storage_yaml_http.py  settings_from_json_file_http.py  settings_from_yaml_file_http.py
src/decorators/: __init__.py  typed_request.py
src/domain/greeting/: __init__.py  greeting_language_decorator.py  greeting_module.py  greeting_service.py  greeting_service_factory.py  greeting_strategy_factory.py
src/infrastructure/: __init__.py
src/infrastructure/config_loaders/: config_loader_factory.py
src/interfaces/: __init__.py
src/interfaces/cli/: __init__.py
src/models/: __init__.py
(+143 files in other folders)
